Thu Dec 12 09:20:07 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/Orbsvcs/CosNotification.bor:
	  Added missing .obj extensions to new files added.

Wed Dec 11 23:23:26 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* TAO_IDL/util/utl_global.cpp: Fixed a warning in the builds.

Wed Dec 11 18:26:09 2002  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:

          Fixes to the #pragma prefix handing in the IDL compiler.
          Thanks to Duane Binder <duane.binder@veritas.com> for
          reporting that one of the "omg.org" prefixes in the 
          chain of (p)idl files included from orb.idl was not
          getting cleared at file's end.

Wed Dec 11 19:18:33 2002  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/orbsvcs/Notify/Notify_Signal_Property_T.cpp:
        * orbsvcs/orbsvcs/Notify/Notify_Signal_Property_T.h:
        * orbsvcs/orbsvcs/Notify/Sequence/EventBatch.cpp:
        * orbsvcs/orbsvcs/Notify/Sequence/EventBatch.h:
        * orbsvcs/orbsvcs/Notify/Sequence/EventBatch.inl:
        * orbsvcs/orbsvcs/Notify/Sequence/Method_Request_Dispatch_EventBatch.cpp:
        * orbsvcs/orbsvcs/Notify/Sequence/Method_Request_Dispatch_EventBatch.h:
        * orbsvcs/orbsvcs/Notify/Sequence/Method_Request_Dispatch_EventBatch.inl:
          Removed the following files obsoleted by the changes to Buffering
          and Sequences described below.

        * orbsvcs/orbsvcs/Notify/Timer.h:
          Abstract Timer object that is obtained via the Proxy.

        * orbsvcs/orbsvcs/Notify/Timer_Queue.cpp:
        * orbsvcs/orbsvcs/Notify/Timer_Queue.h:
        * orbsvcs/orbsvcs/Notify/Timer_Queue.inl:
          Timer implementation that uses the ACE_Timer_Queue.

        * orbsvcs/orbsvcs/Notify/Timer_Reactor.cpp:
        * orbsvcs/orbsvcs/Notify/Timer_Reactor.h: