@@ -1,3 +1,9 @@
+Thu Dec 12 10:29:11 2002  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/fe/fe_tmplinst.cpp:
+
+          Added an explicit instantiation to the list.
+
 Thu Dec 12 09:20:07 2002  Pradeep Gore  <pradeep@oomworks.com>
 
 	* orbsvcs/Orbsvcs/CosNotification.bor:
